# internal/routers/api/api.go
@@ -1,39 +1,40 @@
 package api
 
-import (
-	"gitlab.com/ZmaximillianZ/stskp_sport_api/internal/logging"
-	"gitlab.com/ZmaximillianZ/stskp_sport_api/internal/repository"
-)
-
 type QueryParams struct {
-	Criteria map[string][2]string `json:"criteria"`
-	Order    map[string]string    `json:"order"`
-	Limit    int                  `json:"limit"`
-	Offset   int                  `json:"offset"`
+	Criteria []CriteriaParam
+	Order    map[string]string    `query:"order"`
+	Limit    int                  `query:"limit"`
+	Offset   int                  `query:"offset"`
 }
 
-func ParseQueryParams(AllowedFields []string, qp *QueryParams) (map[string][2]string, map[string]string, int, int, bool) {
-	isComparisonOperator := true
-	criteria := make(map[string][2]string)
-	order := make(map[string]string)
-	for _, value := range AllowedFields {
-		queryVal, okVal := qp.Criteria[value]
-		orderVal, okOrder := qp.Order[value]
-		if !okOrder {
-			logging.Error("user doesn't have this field for order")
-			break
-		}
-		order[value] = orderVal
-		if !okVal {
-			continue
-		}
-		isComparisonOperator = repository.IsComparisonOperator(queryVal[0])
-		if !isComparisonOperator {
-			logging.Error("last element must be comparison operator")
-			break
-		}
-		criteria[value] = queryVal
-	}
-
-	return criteria, qp.Order, qp.Limit, qp.Offset, isComparisonOperator
+type CriteriaParam struct {
+	Field string     `query:"field"`
+	Value string     `value:"field"`
+	Condition string `condition:"field"`
 }
+
+//func ParseQueryParams(AllowedFields []string, qp *QueryParams) (map[string][2]string, map[string]string, int, int, bool) {
+//	isComparisonOperator := true
+//	criteria := make(map[string][2]string)
+//	order := make(map[string]string)
+//	for _, value := range AllowedFields {
+//		queryVal, okVal := qp.Criteria[value]
+//		orderVal, okOrder := qp.Order[value]
+//		if !okOrder {
+//			logging.Error("user doesn't have this field for order")
+//			break
+//		}
+//		order[value] = orderVal
+//		if !okVal {
+//			continue
+//		}
+//		isComparisonOperator = repository.IsComparisonOperator(queryVal[0])
+//		if !isComparisonOperator {
+//			logging.Error("last element must be comparison operator")
+//			break
+//		}
+//		criteria[value] = queryVal
+//	}
+//
+//	return criteria, qp.Order, qp.Limit, qp.Offset, isComparisonOperator
+//}
